--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interactive Rolling Hills Shader</title>
   <style>
-    body { margin: 0; overflow: hidden; }
-    canvas { display: block; }
+    body { margin: 0; padding: 0; overflow: hidden; width: 100vw; height: 100vh; }
+    canvas { display: block; width: 100vw; height: 100vh; position: absolute; top: 0; left: 0; }
   </style>
 </head>
 <body>
@@ -17,9 +17,10 @@
 
     // Scene setup
     const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    const renderer = new THREE.WebGLRenderer();
+    const camera = new THREE.OrthographicCamera(-1, 1, 1, -1, 0, 1);
+    const renderer = new THREE.WebGLRenderer({ antialias: false });
     renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);
     document.body.appendChild(renderer.domElement);
 
     // OrbitControls for mouse interaction - DISABLED for fullscreen shader
@@ -359,12 +360,13 @@ void main()
 	vec2 uv = (-1.0 + 2.0 * xy) * vec2(iResolution.x/iResolution.y,1.0);
 	vec3 camTar;
 	
-	if (xy.y < .13 || xy.y >= .87)
-	{
-		// Top and bottom cine-crop - what a waste! :)
-		gl_FragColor=vec4(0.0);
-		return;
-	}
+	// Removed cine-crop for full screen coverage
+	// if (xy.y < .13 || xy.y >= .87)
+	// {
+	// 	// Top and bottom cine-crop - what a waste! :)
+	// 	gl_FragColor=vec4(0.0);
+	// 	return;
+	// }
 
 	#ifdef STEREO
 	float isCyan = mod(fragCoord.x + mod(fragCoord.y,2.0),2.0);
@@ -462,8 +464,8 @@ void main()
     const plane = new THREE.Mesh(geometry, material);
     scene.add(plane);
 
-    // Position camera for fullscreen effect
-    camera.position.z = 1;
+    // Position camera for fullscreen effect with orthographic camera
+    camera.position.z = 0.5;
     camera.lookAt(0, 0, 0);
     
     // Disable OrbitControls since we want a fixed fullscreen view
@@ -507,27 +509,18 @@ void main()
 
     // Handle fullscreen change events to resize renderer
     document.addEventListener('fullscreenchange', () => {
-      if (document.fullscreenElement) {
-        // Entered fullscreen
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        material.uniforms.iResolution.value.set(window.innerWidth, window.innerHeight, 1.0);
-        camera.aspect = window.innerWidth / window.innerHeight;
-        camera.updateProjectionMatrix();
-      } else {
-        // Exited fullscreen
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        material.uniforms.iResolution.value.set(window.innerWidth, window.innerHeight, 1.0);
-        camera.aspect = window.innerWidth / window.innerHeight;
-        camera.updateProjectionMatrix();
-      }
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      renderer.setPixelRatio(window.devicePixelRatio);
+      material.uniforms.iResolution.value.set(window.innerWidth, window.innerHeight, 1.0);
+      // No need to update camera aspect ratio for orthographic camera
     });
 
     // Handle window resize
     window.addEventListener('resize', () => {
       renderer.setSize(window.innerWidth, window.innerHeight);
+      renderer.setPixelRatio(window.devicePixelRatio);
       material.uniforms.iResolution.value.set(window.innerWidth, window.innerHeight, 1.0);
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
+      // No need to update camera aspect ratio for orthographic camera
     });
 
     // Animation loop
