--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
 <body>
   <canvas class="webgl"></canvas>
-z  <script type="module" src="src/js/script.js"></script>
+  <script type="module" src="src/js/script.js"></script>
 </body>
 </html>
