--- a/index.html
+++ b/index.html
@@ -177,7 +177,10 @@
 
 
   <div id="gameArea" class="hidden">
-    <h1>You're score: <span id="score">0</span></h1>
+    <div style="display: flex; gap: 30px; align-items: center;">
+      <h1>Ringen: <span id="score">0</span>/10</h1>
+      <h2>Snelheid: <span id="speed">1.0</span>x</h2>
+    </div>
   </div>
 
   <canvas class="webgl"></canvas>
