--- a/index.html
+++ b/index.html
@@ -3,412 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sky Navigator - Vliegtuig Ring Spel</title>
-<style>
-  body { 
-    margin: 0; 
-    padding: 0; 
-    overflow: hidden; 
-    font-family: 'Arial', sans-serif;
-    background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
-  }
-  canvas { 
-    display: block; 
-    width: 100vw; 
-    height: 100vh; 
-    position: absolute; 
-    top: 0; 
-    left: 0; 
-  }
-  
-  /* Startscherm styling */
-  #startScreen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(135deg, rgba(30, 60, 114, 0.85) 0%, rgba(42, 82, 152, 0.85) 100%);
-    backdrop-filter: blur(2px);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    z-index: 1000;
-    text-align: center;
-    padding: 20px;
-    box-sizing: border-box;
-  }
+<title>Sky Navigator - Airplane Ring Game</title>
 
-   #gameArea {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: white;
-    z-index: 1000;
-    text-align: center;
-    padding: 20px;
-    box-sizing: border-box;
-  }
-  
-  #startScreen h1 {
-    font-size: 3.5em;
-    margin: 0 0 20px 0;
-    background: #00ffff;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-  }
-  
-  @keyframes glow {
-    from { filter: drop-shadow(0 0 5px #00ffff); }
-    to { filter: drop-shadow(0 0 20px #00ffff); }
-  }
-  
-  #startScreen .subtitle {
-    font-size: 1.5em;
-    margin-bottom: 40px;
-    opacity: 0.9;
-  }
-  
-  #startScreen .instructions {
-    max-width: 600px;
-    font-size: 1.1em;
-    line-height: 1.6;
-    margin-bottom: 40px;
-    background: rgba(0,0,0,0.6);
-    padding: 30px;
-    border-radius: 15px;
-    border: 2px solid rgba(0,255,255,0.5);
-    backdrop-filter: blur(5px);
-  }
-  
-  #startScreen .controls {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    margin-bottom: 40px;
-    max-width: 500px;
-  }
-  
-  #startScreen .control-group {
-    background: rgba(0,0,0,0.4);
-    padding: 15px;
-    border-radius: 10px;
-    border: 1px solid rgba(0,255,255,0.4);
-    backdrop-filter: blur(3px);
-  }
-  
-  #startScreen .control-title {
-    font-weight: bold;
-    color: #00ffff;
-    margin-bottom: 8px;
-  }
-  
-  #startScreen .control-desc {
-    font-size: 0.9em;
-    opacity: 0.8;
-  }
-  
-  #startButton, #flyFreeButton {
-    background: linear-gradient(45deg, #00ffff, #0080ff);
-    border: none;
-    color: white;
-    font-size: 1.5em;
-    font-weight: bold;
-    padding: 15px 40px;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    box-shadow: 0 4px 15px rgba(0,255,255,0.3);
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    min-width: 200px;
-  }
-  
-  #flyFreeButton {
-    background: linear-gradient(45deg, #ff6600, #ff9900);
-    box-shadow: 0 4px 15px rgba(255,102,0,0.3);
-  }
-  
-  #startButton:hover, #flyFreeButton:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 6px 25px rgba(0,255,255,0.5);
-    background: linear-gradient(45deg, #0080ff, #00ffff);
-  }
-  
-  #flyFreeButton:hover {
-    background: linear-gradient(45deg, #ff9900, #ff6600);
-    box-shadow: 0 6px 25px rgba(255,102,0,0.5);
-  }
-  
-  #startButton:active, #flyFreeButton:active {
-    transform: translateY(0);
-  }
-  
-  /* Eindscherm styling */
-  #endScreen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    
-    background: linear-gradient(135deg, rgba(30, 60, 114, 0.85) 0%, rgba(42, 82, 152, 0.85) 100%);
-    backdrop-filter: blur(3px);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    z-index: 1001;
-    text-align: center;
-    padding: 20px;
-    box-sizing: border-box;
-    animation: fadeIn 1s ease-out;
-  }
-
-  @keyframes fadeIn {
-    from { opacity: 0; transform: scale(0.9); }
-    to { opacity: 1; transform: scale(1); }
-  }
-  
-  #endScreen h1 {
-    font-size: 4em;
-    margin: 0 0 20px 0;
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
-    color: #00ffff;
-    font-weight: bold;
-  }
-  
-  #endScreen .subtitle {
-    font-size: 1.8em;
-    margin-bottom: 40px;
-    opacity: 0.95;
-    color: #ffff00;
-  }
-  
-  .end-stats {
-    background: rgba(0,0,0,0.7);
-    padding: 30px;
-    border-radius: 15px;
-    border: 2px solid rgba(0,255,0,0.6);
-    backdrop-filter: blur(5px);
-    margin-bottom: 30px;
-    min-width: 400px;
-  }
-  
-  .stat-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 15px 0;
-    font-size: 1.2em;
-  }
-  
-  .stat-label {
-    font-weight: bold;
-    color: #cccccc;
-  }
-  
-  .stat-value {
-    font-weight: bold;
-    color: #00ff00;
-    font-size: 1.1em;
-  }
-  
-  .end-message {
-    max-width: 600px;
-    font-size: 1.1em;
-    line-height: 1.6;
-    margin-bottom: 40px;
-    background: rgba(0,0,0,0.5);
-    padding: 25px;
-    border-radius: 12px;
-    border: 1px solid rgba(0,255,0,0.4);
-  }
-  
-  .end-buttons {
-    display: flex;
-    gap: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  #playAgainButton, #backToMenuButton {
-    background: linear-gradient(45deg, #00ff00, #00cc00);
-    border: none;
-    color: white;
-    font-size: 1.3em;
-    font-weight: bold;
-    padding: 15px 30px;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    box-shadow: 0 4px 15px rgba(0,255,0,0.3);
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    min-width: 180px;
-  }
-  
-  #backToMenuButton {
-    background: linear-gradient(45deg, #0080ff, #0060cc);
-    box-shadow: 0 4px 15px rgba(0,128,255,0.3);
-  }
-  
-  #playAgainButton:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 6px 25px rgba(0,255,0,0.5);
-    background: linear-gradient(45deg, #00cc00, #00ff00);
-  }
-  
-  #backToMenuButton:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 6px 25px rgba(0,128,255,0.5);
-    background: linear-gradient(45deg, #0060cc, #0080ff);
-  }
-  
-  #playAgainButton:active, #backToMenuButton:active {
-    transform: translateY(0);
-  }
-
-  .hidden {
-    display: none !important;
-  }
-  
-  /* Finish countdown styling */
-  .finish-countdown {
-    position: fixed;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1002;
-    text-align: center;
-    padding: 40px 60px;
-    border-radius: 20px;
-    border: 2px solid rgba(0, 255, 255, 0.6);
-    backdrop-filter: blur(10px);
-    box-shadow: 0 0 15px rgba(0, 255, 255, 0.3);
-  }
-  
-  .countdown-text {
-    color: #00ffff;
-    font-size: 1.8em;
-    font-weight: bold;
-    margin-bottom: 20px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-    letter-spacing: 1px;
-  }
-  
-  .countdown-number {
-    color: #ffffff;
-    font-size: 5em;
-    font-weight: bold;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-  }
-  
-  /* Snelheidsthrottle styling */
-  .speed-throttle {
-    position: fixed;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 1001;
-    background: rgba(0, 0, 0, 0.8);
-    padding: 20px 15px;
-    border-radius: 15px;
-    border: 2px solid rgba(0, 255, 255, 0.5);
-    backdrop-filter: blur(5px);
-    user-select: none;
-    font-family: 'Arial', sans-serif;
-  }
-  
-  .throttle-label {
-    color: #00ffff;
-    font-size: 0.9em;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 10px;
-    letter-spacing: 1px;
-  }
-  
-  .throttle-container {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-  }
-  
-  .throttle-track {
-    position: relative;
-    width: 20px;
-    height: 200px;
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 10px;
-    border: 1px solid rgba(0, 255, 255, 0.3);
-    cursor: pointer;
-  }
-  
-  .throttle-fill {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 10%;
-    background: linear-gradient(to top, #00ff00, #ffff00, #ff6600);
-    border-radius: 0 0 9px 9px;
-    transition: height 0.2s ease;
-  }
-  
-  .throttle-handle {
-    position: absolute;
-    left: -3px;
-    right: -3px;
-    height: 8px;
-    background: #ffffff;
-    border: 2px solid #00ffff;
-    border-radius: 4px;
-    bottom: 10%;
-    transform: translateY(50%);
-    transition: bottom 0.2s ease;
-    cursor: grab;
-    box-shadow: 0 0 10px rgba(0, 255, 255, 0.5);
-  }
-  
-  .throttle-handle:active {
-    cursor: grabbing;
-    box-shadow: 0 0 15px rgba(0, 255, 255, 0.8);
-  }
-  
-  .throttle-markers {
-    display: flex;
-    flex-direction: column;
-    height: 200px;
-    position: relative;
-  }
-  
-  .marker {
-    position: absolute;
-    color: rgba(255, 255, 255, 0.7);
-    font-size: 0.8em;
-    font-weight: bold;
-    white-space: nowrap;
-  }
-  
-  .throttle-value {
-    color: #ffffff;
-    font-size: 1.2em;
-    font-weight: bold;
-    text-align: center;
-    margin-top: 10px;
-    text-shadow: 0 0 10px rgba(0, 255, 255, 0.8);
-  }
-</style>
+  <link rel="stylesheet" href="./src/style.css">
 </head>
 
 <body>
