--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
   </div>
 
   <canvas class="webgl"></canvas>
-  <script type="module" src="src/js/script.js"></script>
+  <script type="importmap">
+    {
+      "imports": {
+        "three": "https://unpkg.com/three@0.180.0/build/three.module.js",
+        "three/examples/jsm/loaders/GLTFLoader.js": "https://unpkg.com/three@0.180.0/examples/jsm/loaders/GLTFLoader.js"
+      }
+    }
+  </script>
+  <script type="module" src="src/assets/js/script.js"></script>
 </body>
 </html>
